styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-family: "Red Hat Display", sans-serif;
  font-optical-sizing: auto;
  font-size: var(--font-size-root);
}

:root {
  --font-size-root: 16px;
  --font-size-small: 1.125rem;
  --font-size-medium: 1.5rem;
  --font-size-large: 3rem;
  --color-1: #6b59d0;
  --color-2: #deddeb;
  --color-3: #ffffff;
  --color-4: #374151;
  --color-5: #6b7280;
  --gap-1: 1rem;
  --gap-2: 1.5rem;
  --feature-min-width: 17.5rem;
}

.background,
.heading {
  position: relative;
  z-index: 1;
}
.heading {
  padding: 0 7%;
  margin: var(--gap-2) 0;
  overflow: hidden;
}
.heading__item {
  width: min(100%, 43rem);
  margin: var(--gap-1) 0;
}
.content {
  padding: var(--gap-2) 1% var(--gap-2) 5%;
}

.content {
  display: flex;
  flex-wrap: wrap;
}

.flex-row {
    flex: 1 1 calc(var(--feature-min-width) * 2);
    display: flex;
    flex-wrap: wrap;
}

.content, .flex-row {
    row-gap: calc(var(--gap-1) * 2);
}

.feature {
  flex: 1 1 var(--feature-min-width);
}

.feature::before {
  content: "";
  position: absolute;
  top: 0;
  background: repeating-linear-gradient(
    180deg,
    var(--color-2) 0,
    var(--color-2) 5px,
    white 5px,
    white 10px
  );
  width: 1px;
  height: 100vh;
  z-index: 0;
}

.feature__item {
  margin: 0 1rem;
}

.feature__item:not(.feature__icon) {
  width: min(100%, 15rem);
}

/* TYPOGRAPHY */
.small-title {
  color: var(--color-1);
  font-size: var(--font-size-medium);
  font-weight: 700;
}
.large-title {
  color: var(--color-4);
  font-size: var(--font-size-large);
  font-weight: 800;
}
.feature__title,
.feature__description {
  color: var(--color-4);
  font-size: var(--font-size-small);
  letter-spacing: 1px;
}

.highlight {
  color: var(--color-1);
  font-weight: 600;
}

